# AutoESN

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
auto/: greedy_esn.py
datasets/: 3sins.csv  memoryCapacity.csv  mg10.csv  narma10.csv  stock_price_day.csv  sunspotSmooth.csv
esn/: activation.py  cell.py  esn.py  initialization.py  svr_readout.py  util.py
esn/readout/: nn_readout.py
esn/reservoir/: activation.py  cell.py  initialization.py
examples/: easiest_example_mg.py  mg_example.py  stock.py  sunspot.py  sunspot_smooth.py  temperature.py
src/auto_esn/: deep_alco.py
src/auto_esn/auto/: greedy_esn.py  util.py
src/auto_esn/datasets/: df.py  memoryCapacity.csv  mg.csv  mg10.csv  predefined.py  sunspot.csv  temperature_day.csv
src/auto_esn/esn/: esn.py
src/auto_esn/esn/readout/: nn_readout.py  svr_readout.py
src/auto_esn/esn/reservoir/: activation.py  cell.py  initialization.py  multi_time_series.py  util.py
src/auto_esn/examples/: deep_alco.py  easiest_example_mg.py  extrapolation_example.py  mg_example.py  multidim_input.py  multidim_input_and_output.py  paper_like_dESN_setup.py  predefined_dataset_complex_initialization.py  save_load_model.py  sunspot.py  sunspot_smooth.py
src/auto_esn/experiment/: Experiment.py  util.py
src/auto_esn/experiments/: Experiment.py
src/auto_esn/experiments_tmp/: k_regular_graph.py  strogatz.py
src/auto_esn/utils/: dataset_loader.py
utils/: dataset_loader.py  math.py  types.py
