[metadata]
name = auto_esn
version = 0.0.6
author = Robert Wcislo
license = MIT License
author_email = robert.wcislo1995@gmail.com
description = A modular Reservoir Computing library. Using Echo State Networks. Built in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ro6ertWcislo/AutoESN
project_urls =
    Bug Tracker = https://github.com/Ro6ertWcislo/AutoESN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy == 1.22.0
    pandas == 1.2.4
    matplotlib == 3.4.2
    networkx == 2.5.1

[options.packages.find]
where = src